--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Lexend+Mega&display=swap');
+
 h1{
+  font-family: 'Lexend Mega', sans-serif;
   text-transform: uppercase;
+}
+h1.header{
+  color: #66FCF1; /*šikulka :) */ 
+  
+}
+body {
+  background-color: #0B0C10;
+	/* a ted' ještě barvu textu na tu světlou */
+	color: #C5C6C7;
 }
