--- a/style.css
+++ b/style.css
@@ -13,3 +13,7 @@ body {
 	/* a ted' ještě barvu textu na tu světlou */
 	color: #C5C6C7;
 }
+.btn-large {
+  border: 2px solid #45A29E !important;
+  background-color: #0B0C10 !important;
+}
