--- a/style.css
+++ b/style.css
@@ -30,5 +30,24 @@ body {
 }
 .modal-footer a {
 			color: #C5C6C7 !important;
+}
+#name {
+	font-size: 2.7rem;
+}
+#about>.row>div {
+	margin-bottom: 50px;
+}
+#post {
+	font-size: 1.8rem;
+}
 
+@media screen and (max-width: 700px) {
+	#about>.row>div>img {
+		width: 50%;
+	}
+}
+@media screen and (min-width: 700px) {
+	#about>.row>div>img {
+		width: 30%;
+	}
 }
