--- a/style.css
+++ b/style.css
@@ -40,7 +40,9 @@ body {
 #post {
 	font-size: 1.8rem;
 }
-
+#about>.row>div>img {
+	margin-top: 20px;
+}
 @media screen and (max-width: 700px) {
 	#about>.row>div>img {
 		width: 50%;
@@ -66,4 +68,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+}
+html body section#contact.row div {
+  font-size: 1.5rem;
 }
